<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FD4D35"
    tools:context="com.aneeq.foodrunner.activity.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imgFPLogo"
        android:layout_width="245dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logofood" />

    <TextView
        android:id="@+id/txtEnterYour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgFPLogo"
        android:layout_marginTop="10dp"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"

        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etFPMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/txtEnterYour"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/ic_mobile"
        android:hint="@string/fp_mobile_number_10_digits"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etFPEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/etFPMobileNumber"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:background="#FFFFFF"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"

        />

    <Button
        android:id="@+id/btnFPNext"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/etFPEmail"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:background="#FB0404"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>